--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>mathbridgeacademy</title>
+  <title>MathBridgeAcademy</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
