--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <!--<base href="/">-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="To create a safe and transformative learning environment where students heal from the wounds inflicted by traditional schooling, rediscover the joy of learning, and build a confident and empowered relationship with Mathematics and themselves.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="mathbridgeacademy">
+  <meta name="apple-mobile-web-app-title" content="MathBridge Academy">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>MathBridgeAcademy</title>
+  <title>MathBridge Academy</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
